--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container"></div>
+    </header>
+    <main class="main">
+      <div class="container"></div>
+    </main>
+    <footer class="footer">
+      <div class="container"></div>
+    </footer>
+  </body>
 </html>
