feat: edit index.html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,142 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header class="header">
-      <div class="container"></div>
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">Contacts</a>
+            </li>
+            <li class="nav-item">
+              <a href="#summary" class="nav-link">Summary</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#code" class="nav-link">Code</a>
+            </li>
+            <li class="nav-item">
+              <a href="#courses" class="nav-link">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#education" class="nav-link">Education</a>
+            </li>
+            <li class="nav-item">
+              <a href="#english" class="nav-link">English</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
-      <div class="container"></div>
+      <div class="container">
+        <section class="section" id="profile">
+          <h1 class="section-title">aleksandr ilin</h1>
+        </section>
+
+        <section class="section" id="contacts">
+          <h2 class="section-title">contacts</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <span class="title-item">email:</span>
+              <span class="desc-item">xgroth50x@gmail.com</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">github:</span>
+              <span class="desc-item">groth50</span>
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="summary">
+          <h2 class="summary">summary</h2>
+          <p>I'm ABAP software developer</p>
+        </section>
+
+        <section class="section" id="skills">
+          <h2 class="section-title">skills</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <span class="title-item">development:</span>
+              <span class="desc-item">Java, JDBC, Hibernate, MySQL</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">DB:</span>
+              <span class="desc-item">MySQL, Oracle, S4H</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">version control:</span>
+              <span class="desc-item">GIT, github</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">server:</span>
+              <span class="desc-item">tomcat, jetty</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">build tools:</span>
+              <span class="desc-item">maven</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">graphics:</span>
+              <span class="desc-item">figma</span>
+            </li>
+          </ul>
+        </section>
+        <section class="section" id="code">
+          <h2 class="section-title">code</h2>
+          <code class="code">
+            <p>function digits(n) {</p>
+            <p>n.toString().match(/\d/g).length;</p>
+            <p>}</p>
+          </code>
+        </section>
+        <section class="section" id="courses">
+          <h2 class="section-title">courses</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <span class="title-item">Stepic:</span>
+              <span class="desc-item">Разработка веб сервиса на Java</span>
+            </li>
+            <li class="section-item">
+              <span class="title-item">СПбПУ:</span>
+              <span class="desc-item">Управление данными</span>
+            </li>
+          </ul>
+        </section>
+
+        <section class="section" id="projects">
+          <h2 class="section-title">projects</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <a href="https://github.com/groth50" class="projects-link">
+                Github
+              </a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="section" id="education">
+          <h2 class="section-title">education</h2>
+          <span class="desc">
+            Almetyevsk State Oil Institute Almetyevsk, Russia
+          </span>
+        </section>
+        <section class="section" id="languages">
+          <h2 class="section-title">languages</h2>
+          <ul class="section-list">
+            <li class="section-item">
+              <span class="title-item">English:</span>
+              <span class="desc-item">B1 (Pre-Intermediate)</span>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="container"></div>
