feat: edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
       </div>
     </header>
     <main class="main">
-      <div class="container">
-        <section class="section" id="profile">
+      <div class="container main-container">
+        <section class="section">
+          <img src="assets\img\cv.jpg" alt="avatar" class="avatar" />
+        </section>
+        <section class="section head-section" id="profile">
           <h1 class="section-title">aleksandr ilin</h1>
         </section>
 
@@ -68,7 +71,7 @@
           </ul>
         </section>
         <section class="section" id="summary">
-          <h2 class="summary">summary</h2>
+          <h2 class="section-title">summary</h2>
           <p>I'm ABAP software developer</p>
         </section>
 
@@ -127,9 +130,7 @@
           <h2 class="section-title">projects</h2>
           <ul class="section-list">
             <li class="section-item">
-              <a href="https://github.com/groth50" class="projects-link">
-                Github
-              </a>
+              <a href="https://github.com/groth50" class="link"> Github </a>
             </li>
           </ul>
         </section>
