add link for open index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main class="main">
       <div class="container main-container">
         <section class="section">
-          <img src="assets\img\cv.jpg" alt="avatar" class="avatar" />
+          <img src="assets/img/cv.jpg" alt="avatar" class="avatar" />
         </section>
         <section class="section head-section" id="profile">
           <h1 class="section-title">aleksandr ilin</h1>
