fix: code section

--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
         </section>
         <section class="section" id="code">
           <h2 class="section-title">code</h2>
+          <pre>
           <code class="code">
-            <p>function digits(n) {</p>
-            <p>n.toString().match(/\d/g).length;</p>
-            <p>}</p>
+            function digits(n) {
+              n.toString().match(/\d/g).length;
+            }
           </code>
+        </pre>
         </section>
         <section class="section" id="courses">
           <h2 class="section-title">courses</h2>
